commit, main header

--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -1,6 +1,5 @@
 html,
 body {
-    /* font-size: 20px; */
     font-family: Lato, sans-serif;
     color: #424551;
 
@@ -21,6 +20,7 @@ body {
 }
 
 .button {
+    display: inline-block;
     font-weight: 700;
     letter-spacing: 0.5px;
     line-height: 52px;
@@ -37,6 +37,25 @@ body {
     transform: scale(1.05);
 
 }
+
+.button--empty {
+    background-image: none;
+    border-left: 2px solid #FF3F3A;
+    border-right: 2px solid #F75E05;
+    background-image: -webkit-linear-gradient(left, #FF3F3A, #F75E05), -webkit-linear-gradient(left, #FF3F3A, #F75E05);
+    background-image: linear-gradient(left, #FF3F3A, #F75E05), linear-gradient(left, #FF3F3A, #F75E05);
+    background-size: 100% 2px;
+    background-position: 0 100%, 0 0;
+    background-repeat: no-repeat;
+    background-clip: border-box;
+}
+
+.button--empty span {
+    background: linear-gradient(55.95deg, #FF3F3A 0%, #F75E05 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 
 .logo {}
 
@@ -136,18 +155,79 @@ body {
     display: block;
 }
 
+/* ---------wower top------------------------------------ */
 
-.wrapper {}
+.header__main {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #1e212c;
+
+}
+
+.header__content {
+    margin-right: 30px;
+}
 
 
+.header__title {
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 130%;
+    letter-spacing: 1px;
+    max-width: 500px;
+    margin-bottom: 60px;
+}
 
 
-.header__body {}
+.header__content-buttons {
+    display: flex;
+}
 
-.container {}
+.header__content-btn {
+    margin-right: 24px;
+}
 
+.header__content-btn:last-child {
+    margin-right: 0px;
+}
 
+.header__play {
+    display: inline-flex;
+    align-items: center;
+    margin-bottom: 24px;
 
+}
 
+.header__play svg {
+    margin-right: 16px;
+    border-radius: 50%;
+    transition: all .3s;
 
-.header__user-btn {}
+}
+
+.header__play:hover svg {
+    box-shadow: 0 0 0 16px rgba(255, 63, 58, 0.12);
+}
+
+.header__row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #1e212c;
+
+}
+
+.header__row-item {
+    display: flex;
+    align-items: center;
+  
+
+}
+
+.header__row-item span {
+    font-size: 46px;
+    font-weight: 900;
+    line-height: 130%;
+    margin-right: 12px;
+}
