--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -257,3 +257,5 @@ margin: 80px;
     line-height: 130%;
     margin-right: 12px;
 }
+
+/* ---------------------end main----------------------------- */
