--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -17,8 +17,8 @@ body {
     /* чтобы контент не прилипал к границам вьюпорта слева и справа */
     margin: 0 auto;
     /* авто отступ (сверух и снизу 0, по бокам авто, это центрирует контент */
-height: 100%;
-/* контейнеру всегда можно быть на 100%
+    height: 100%;
+    /* контейнеру всегда можно быть на 100%
 своего родителя, где бы мы его не задали*/
 }
 
@@ -166,19 +166,18 @@ height: 100%;
     flex-grow: 1;
 }
 
-.header__body-inner{
+.header__body-inner {
     display: flex;
     flex-direction: column;
     height: 100%;
 }
 
 .header__main {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     color: #1e212c;
     margin: auto 0;
-
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
 
 }
 
@@ -228,36 +227,56 @@ height: 100%;
 }
 
 .header__row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
     color: #1e212c;
-margin: 80px;
-}
+    margin-bottom: 80px;
 
-.header__row>span {
-    /* обращаемся именно к спанам 
-первого порядка  */
-    background: #FF3F3A;
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    margin: 0 15px;
 }
 
 .header__row-item {
     display: flex;
+    list-style-type: none;
+
     align-items: center;
-
-
 }
 
-.header__row-item span {
+
+
+.header__row-bold {
     font-size: 46px;
     font-weight: 900;
     line-height: 130%;
     margin-right: 12px;
 }
 
-/* ---------------------end header----------------------------- */
 
+.header__row-dots {
+
+    background: #FF3F3A;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    margin: 0 46px;
+
+}
+
+.header__row-dots--1 {
+    transform: translateX(-20px);
+}
+
+.header__row-dots--2 {
+    transform: translateX(-20px);
+}
+
+.header__row-item--1 {
+    transform: translateX(20px);
+}
+
+
+
+
+
+
+/* ---------------------end header----------------------------- */
