--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -231,7 +231,7 @@ height: 100%;
     justify-content: space-between;
     align-items: center;
     color: #1e212c;
-margin: 80px;
+margin-bottom: 80px;
 }
 
 .header__row>span {
