--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -60,7 +60,7 @@ height: 100%;
 }
 
 
-.logo {}
+
 
 /* --------------Общие элементы сверху-------------------------------------*/
 .header {
@@ -160,7 +160,7 @@ height: 100%;
     display: block;
 }
 
-/* ---------wower top------------------------------------ */
+/* ---------hower top------------------------------------ */
 .header__body {
     flex-grow: 1;
 }
@@ -177,7 +177,6 @@ height: 100%;
     align-items: center;
     color: #1e212c;
     margin: auto 0;
-
 
 }
 
@@ -258,4 +257,61 @@ margin-bottom: 80px;
     margin-right: 12px;
 }
 
-/* ---------------------end main----------------------------- */
+/* ---------------------end header----------------------------- */
+
+
+.main__section{
+   display: flex;
+   color: #1e212c;
+   margin-top: 179px;
+   /* flex-wrap: wrap; */
+}
+
+
+
+
+
+.main__img{
+    width: 465px;
+    height: 400px;
+    margin-left: 90px;
+}
+
+
+
+.main__title {
+
+font-weight: 700;
+line-height: 150%; 
+letter-spacing: 1px;
+text-transform: uppercase;
+}
+
+.main__title-2 {
+    font-size: 46px;
+    font-weight: 900;
+    line-height: 130%;
+    letter-spacing: 1px;
+    max-width: 500px;
+    margin-bottom: 30px;
+}
+
+
+.main__title-3 {
+    font-size: 20px;
+     font-weight: 700;
+    line-height: 150%; 
+    max-width: 600px;
+    margin-bottom: 20px;
+}
+
+.main__content p{
+    font-weight: 400;
+    line-height: 160%; 
+    max-width: 600px;
+    margin-bottom: 50px;
+}
+
+.main__img-2 {
+    
+}
