--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -2,7 +2,7 @@ html,
 body {
     font-family: Lato, sans-serif;
     color: #424551;
-
+    line-height: 160%;
 }
 
 .wrapper {
@@ -14,12 +14,8 @@ body {
 .container {
     max-width: 1260px;
     padding: 0 15px;
-    /* чтобы контент не прилипал к границам вьюпорта слева и справа */
     margin: 0 auto;
-    /* авто отступ (сверух и снизу 0, по бокам авто, это центрирует контент */
-height: 100%;
-/* контейнеру всегда можно быть на 100%
-своего родителя, где бы мы его не задали*/
+    height: 100%;
 }
 
 .button {
@@ -61,6 +57,26 @@ height: 100%;
 
 
 .logo {}
+
+.heading {
+    color: #1E212C;
+}
+
+.heading__subtitle {
+    font-weight: 700;
+    line-height: 150%;
+    /* 24px */
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-bottom: 8px;
+}
+
+.heading__title {
+    font-size: 46px;
+    font-weight: 900;
+    line-height: 130%;
+    /* 59.8px */
+}
 
 /* --------------Общие элементы сверху-------------------------------------*/
 .header {
@@ -165,7 +181,7 @@ height: 100%;
     flex-grow: 1;
 }
 
-.header__body-inner{
+.header__body-inner {
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -231,7 +247,7 @@ height: 100%;
     justify-content: space-between;
     align-items: center;
     color: #1e212c;
-margin-bottom: 80px;
+    margin-bottom: 80px;
 }
 
 .header__row>span {
@@ -259,3 +275,111 @@ margin-bottom: 80px;
 }
 
 /* ---------------------end main----------------------------- */
+.about{
+    padding-top: 160px;
+    
+}
+
+
+.about__createx {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    margin-bottom: 180px;
+    position: relative;
+}
+
+.about__createx::before {
+    content: "";
+    position: absolute;
+    top: -30px;
+    right: -148px;
+    background: url(../images/decor/1.svg);
+    width: 100px;
+    height: 85px;
+    }
+    
+    
+
+
+.about__createx-content {
+    max-width: 600px;
+    margin-right: 30px;
+}
+
+.about__heading {
+    margin-bottom: 48px;
+}
+
+.about__text {
+    margin-bottom: 60px;
+}
+
+.about__paragraph {
+    margin-bottom: 24px;
+}
+
+.about__paragraph:last-child {
+    margin-bottom: 0;
+}
+
+.about__paragraph--accent {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 150%;
+    /* 30px */
+    color: #1e212c;
+
+}
+
+.about__btn-box {
+    display: flex;
+}
+
+.about__btn {
+    margin-right: 24px;
+}
+
+.about__btn:last-child {
+    margin-right: 0;
+}
+
+.about__values{
+    display: flex;
+    justify-content: space-between;
+   
+}
+
+
+.about__numbers{
+    margin-left: 30px;
+    align-self: center;
+}
+
+.about__number{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.about__number:last-child{
+    margin-bottom: 0;`
+}
+
+.about__number span{
+font-size: 48px;
+font-weight: 900;
+line-height: 130%; /* 62.4px */
+letter-spacing: 1px;
+color: var(--primary, #FF3F3A);
+margin-right: 16px;
+}
+
+
+
+
+.about__image-box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
