--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -304,12 +304,35 @@ text-transform: uppercase;
     margin-bottom: 20px;
 }
 
+
+
+.main__section {
+    position: relative;
+}
+
+
+.main__section::before{
+    content: '';
+    position:absolute;
+    top:-90px;
+    right:-153px;
+    background: url("../images/decor/1.svg");
+    width: 100px; 
+    height: 85px;
+}
+
+
+
 .main__content p{
     font-weight: 400;
     line-height: 160%; 
     max-width: 600px;
     margin-bottom: 50px;
 }
+
+
+
+
 
 .main__img-2 {
     width: 810px;
