--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -62,7 +62,7 @@ body {
     color: #1E212C;
 }
 
-.heading__subtitle {
+.heading__subtitle: {
     font-weight: 700;
     line-height: 150%;
     /* 24px */
@@ -70,6 +70,34 @@ body {
     text-transform: uppercase;
     margin-bottom: 8px;
 }
+
+.about__heading:hover>p {
+    color: #FF3F3A;
+}
+
+
+
+
+@keyframes myAnim {
+	0%,
+	50%,
+	100% {
+		opacity: 1;
+	}
+
+	25%,
+	75% {
+		opacity: 0;
+	}
+}
+
+
+.about__heading:hover>h2 {
+    animation: myAnim 5s ease 0s 1 normal forwards;
+
+}
+
+
 
 .heading__title {
     font-size: 46px;
@@ -332,8 +360,9 @@ body {
 
 }
 
-.about__btn-box {
+.about__btn-box:focus {
     display: flex;
+    box-shadow: 23px 5px 10px 1px #000000;
 }
 
 .about__btn {
@@ -378,8 +407,108 @@ margin-right: 16px;
 
 
 
-.about__image-box img {
+.about__image-box:hover img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    animation: myAnim 5s ease 0s 1 normal forwards;
+}
+
+
+.about__img:active{
+    filter: blur(7px);
+}
+
+
+@keyframes myAnim {
+	0% {
+		animation-timing-function: ease-in;
+		opacity: 1;
+		transform: translateX(48px);
+	}
+
+	24% {
+		opacity: 1;
+	}
+
+	40% {
+		animation-timing-function: ease-in;
+		transform: translateX(26px);
+	}
+
+	65% {
+		animation-timing-function: ease-in;
+		transform: translateX(13px);
+	}
+
+	82% {
+		animation-timing-function: ease-in;
+		transform: translateX(6.5px);
+	}
+
+	93% {
+		animation-timing-function: ease-in;
+		transform: translateX(4px);
+	}
+
+	25%,
+	55%,
+	75%,
+	87%,
+	98% {
+		animation-timing-function: ease-out;
+		transform: translateX(0px);
+	}
+
+	100% {
+		animation-timing-function: ease-out;
+		opacity: 1;
+		transform: translateX(0px);
+	}
+}
+
+
+
+@keyframes myAnim {
+	0% {
+		animation-timing-function: ease-in;
+		opacity: 0;
+		transform: scale(0);
+	}
+
+	38% {
+		animation-timing-function: ease-out;
+		opacity: 1;
+		transform: scale(1);
+	}
+
+	55% {
+		animation-timing-function: ease-in;
+		transform: scale(0.7);
+	}
+
+	72% {
+		animation-timing-function: ease-out;
+		transform: scale(1);
+	}
+
+	81% {
+		animation-timing-function: ease-in;
+		transform: scale(0.84);
+	}
+
+	89% {
+		animation-timing-function: ease-out;
+		transform: scale(1);
+	}
+
+	95% {
+		animation-timing-function: ease-in;
+		transform: scale(0.95);
+	}
+
+	100% {
+		animation-timing-function: ease-out;
+		transform: scale(1);
+	}
 }
