--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -166,6 +166,19 @@ body {
 .header__btn-box {
     display: flex;
     align-items: center;
+   
+}
+
+@keyframes myAnim4 {
+	0% {
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+		transform: scale(1) translateX(0) translateY(0);
+	}
+
+	100% {
+		box-shadow: 12px 12px 20px -12px rgba(0, 0, 0, 0.35);
+		transform: scale(1.1) translateX(-12px) translateY(-12px);
+	}
 }
 
 .header__user-btn {
@@ -341,6 +354,7 @@ body {
 
 .about__text {
     margin-bottom: 60px;
+    animation: myAnim4 2s ease 0s infinite normal forwards;
 }
 
 .about__paragraph {
@@ -383,6 +397,38 @@ body {
 .about__numbers{
     margin-left: 30px;
     align-self: center;
+    animation: myAnim2 2s ease 0s infinite normal forwards;
+}
+@keyframes myAnim2 {
+	0%,
+	100% {
+		transform: rotate(0deg);
+		transform-origin: 50% 100%;
+	}
+
+	10% {
+		transform: rotate(2deg);
+	}
+
+	20%,
+	40%,
+	60% {
+		transform: rotate(-4deg);
+	}
+
+	30%,
+	50%,
+	70% {
+		transform: rotate(4deg);
+	}
+
+	80% {
+		transform: rotate(-2deg);
+	}
+
+	90% {
+		transform: rotate(2deg);
+	}
 }
 
 .about__number{
