--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -260,58 +260,18 @@ margin-bottom: 80px;
 /* ---------------------end header----------------------------- */
 
 
-.main__section{
+.about__section{
    display: flex;
    color: #1e212c;
-   margin-top: 179px;
+   padding-top: 179px;
    flex-wrap: wrap;
    margin-bottom: 179px;
+   position: relative;
+   justify-content: space-between;
 }
 
 
-
-.main__img{
-    width: 465px;
-    height: 400px;
-    margin-left: 160px;
-}
-
-
-
-.main__title {
-
-font-weight: 700;
-line-height: 150%; 
-letter-spacing: 1px;
-text-transform: uppercase;
-}
-
-.main__title-2 {
-    font-size: 46px;
-    font-weight: 900;
-    line-height: 130%;
-    letter-spacing: 1px;
-    max-width: 500px;
-    margin-bottom: 30px;
-}
-
-
-.main__title-3 {
-    font-size: 20px;
-     font-weight: 700;
-    line-height: 150%; 
-    max-width: 600px;
-    margin-bottom: 20px;
-}
-
-
-
-.main__section {
-    position: relative;
-}
-
-
-.main__section::before{
+.about__section::before{
     content: '';
     position:absolute;
     top:-90px;
@@ -323,48 +283,105 @@ text-transform: uppercase;
 
 
 
-.main__content p{
+
+.about__content-btn {
+    margin-right: 24px;
+}
+
+.about__content-btn:last-child {
+    margin-right: 0px;
+}
+
+
+.about__img{
+    width: 465px;
+    height: 400px;
+
+}
+
+
+
+.about__title {
+
+font-weight: 700;
+line-height: 150%; 
+letter-spacing: 1px;
+text-transform: uppercase;
+}
+
+.about__title-2 {
+    font-size: 46px;
+    font-weight: 900;
+    line-height: 130%;
+    letter-spacing: 1px;
+    max-width: 500px;
+    margin-bottom: 30px;
+}
+
+
+.about__title-3 {
+    font-size: 20px;
+     font-weight: 700;
+    line-height: 150%; 
+    max-width: 600px;
+    margin-bottom: 20px;
+}
+
+
+
+
+
+
+
+
+.about__content p{
     font-weight: 400;
     line-height: 160%; 
     max-width: 600px;
     margin-bottom: 50px;
+    
 }
 
 
 
 
 
-.main__img-2 {
+.about_img-2 {
     width: 810px;
 }
 
 
-.main__section-2{
+.about__section-2{
     display: flex;
-  
+  justify-content: space-between;
 }
 
 
-.main__content-2 {
+.about__content-2 {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 150px;
+    
    }
 
-.main__list {
+.about__list {
 display: flex;
 flex-direction: column;
 color: #1e212c;
 }
 
-.main__list li {
+.about__list li {
     display: flex;
     align-items: center;
+    color: var(--gray-900, #1E212C);
+/* large/bold */
+font-size: 18px;
+font-weight: 700;
+line-height: 150%; /* 27px */
 }
 
 
-.main__list span {
+.about__list span {
     font-size: 48px;
 font-weight: 900;
 line-height: 130%; 
