fixed box for img about

--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -344,13 +344,8 @@ body {
 
 
 
-.about__img {
-    width: 810px;
-}
-
-.about__img-box {
-    width: 100%;
-
+.about__img-2 {
+       width: 100%;
 }
 
 
