--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -390,4 +390,29 @@ body {
     margin-right: 16px;
 }
 
-/* -------end about us ----------------- */
+/* --------------end about us --------------------------- */
+
+.courses__titles{
+    color: #1E212C;
+    text-align: center;
+    padding-top: 161px;
+}
+
+.courses__subtitle {
+    font-weight: 700;
+    line-height: 150%;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+
+
+
+
+.courses__title{
+    font-size: 46px;
+    font-weight: 900;
+    line-height: 130%;
+    letter-spacing: 1px;
+}
+
