--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -424,23 +424,31 @@ body {
 }
 
 
-.courses__item li {
-    display: flex;
-    align-items: center;
+.courses__nav-btn {
+    display: inline-block;
     margin-right: 61px;
     border: 1px solid;
+    background-color: white;
     border-color: #000000;
     border-radius: 5px;
     padding: 1px 8px;
     font-weight: 700;
+    line-height: 160%;
     height: 26px;
+    user-select: none;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
 }
 
 .courses__item li:last-child {
     margin-right: 0;
 }
 
-.courses__item li:hover {
+.courses__nav-btn:hover {
     background: linear-gradient(56deg, #FF3F3A 0%, #F75E05 100%)
 }
 
@@ -452,13 +460,126 @@ body {
     padding-top: 57px;
 }
 
+.course__cards img {
+    margin-bottom: 24px;
+
+}
 
 
-.course__cards-item-1 button{
-  background-color: #03CEA4;
-  color: white
+.course__cards-item-1,
+.course__cards-item-2,
+.course__cards-item-3,
+.course__cards-item-4,
+.course__cards-item-5,
+.course__cards-item-6 {
+    width: 390px;
+    height: 420px;
+}
+
+
+.course__cards-item-1,
+.course__cards-item-2,
+.course__cards-item-4,
+.course__cards-item-5 {
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+
+
+.course__cards button {
+   
+   
+    display: inline-block;
     border-radius: 4px;
     padding: 1px 8px;
     font-weight: 700;
+    line-height: 160%;
     height: 26px;
+    user-select: none;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+}
+
+
+.course__cards-item-1 button {
+    background-color: #03CEA4;
+    color: white;
+}
+
+.course__cards-item-2 button {
+    background-color: #5A87FC;
+    color: white;
+}
+
+.course__cards-item-3 button {
+    background-color: #F89828;
+    color: white;
+}
+
+.course__cards-item-4 button {
+    background-color: #F52F6E;
+    color: white;
+}
+
+.course__cards-item-5 button {
+    background-color: #7772F1;
+    color: white;
+}
+
+
+.course__cards-inner{
+padding-left: 32px;
+padding-bottom: 24px;
+
+}
+
+
+.course__cards-text {
+    padding-top: 21px;
+    width: 342px;
+    color: var(--gray-700, #787A80);
+    font-weight: 400;
+    line-height: 160%;
+    margin-bottom: 20px;   
+    
+}
+
+.course__cards-link {
+    font-weight: 700;
+    line-height: 160%;
+}
+
+.course__cards-link:hover {
+color: #FF3F3A;
+}
+
+.course__cards-link::before {
+    top: 0;
+    left: 0;
+    width: 5px;
+    background-image: url(../images/icons/arrow-right.svg);
+}
+
+
+
+.course__cards-item-6 {
+    display: flex;
+    align-items: center;
+    background-color: #F4F5F6;
+
+}
+
+.course__last-card-text {
+
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 150%;
+    /* 30px */
+    width: 242px;
+    height: 60px;
 }
