--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -614,3 +614,9 @@ body {
     width: 242px;
     height: 60px;
 }
+
+
+.cards:nth-child(n-5):hover { 
+    
+box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.03), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 80px 80px -20px rgba(154, 156, 165, 0.08);
+}
