--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -393,7 +393,7 @@ body {
 /* --------------end about us --------------------------- */
 
 .courses__titles {
-        color: #1E212C;
+    color: #1E212C;
     text-align: center;
     padding-top: 161px;
 
@@ -423,7 +423,7 @@ body {
 
 
 
-.courses__title::before  {
+.courses__title::before {
     content: "";
     position: absolute;
     top: -50px;
@@ -482,35 +482,42 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
     padding-top: 57px;
+
+
+    
 }
 
 .course__cards img {
     margin-bottom: 24px;
 
+
 }
+
+
 
 
 
 
 .course__cards-item-1,
 .course__cards-item-2,
-.course__cards-item-3,
-.course__cards-item-4,
-.course__cards-item-5,
-.course__cards-item-6 {
-    width: 390px;
-    height: 420px;
-}
+.course__cards-item-3 {
 
-
-.course__cards-item-1,
-.course__cards-item-2,
-.course__cards-item-4,
-.course__cards-item-5 {
-    margin-right: 30px;
     margin-bottom: 30px;
 }
+
+
+.course__cards-item-1,
+.course__cards-item-2,
+.course__cards-item-5,
+.course__cards-item-4 {
+    margin-right: 30px;
+
+}
+
+
 
 
 
@@ -522,13 +529,8 @@ body {
     padding: 1px 8px;
     font-weight: 700;
     line-height: 160%;
-    height: 26px;
     user-select: none;
-    text-align: center;
-    text-decoration: none;
-    vertical-align: middle;
-    cursor: pointer;
-    -webkit-user-select: none;
+     -webkit-user-select: none;
     -moz-user-select: none;
 }
 
@@ -618,12 +620,16 @@ body {
 }
 
 
-.cards:nth-child(n-5):hover { 
-    
-box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.03), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 80px 80px -20px rgba(154, 156, 165, 0.08);
+.cards:nth-child(n-5):hover {
+
+    box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.03), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 80px 80px -20px rgba(154, 156, 165, 0.08);
 }
 
-
+.cards{
+border-radius: 4px;
+border: 1px solid var(--gray-300, #E5E8ED);
+background: var(--white, #FFF);
+}
 .courses__sert-img {
     width: 705px;
     height: 500px;
@@ -633,15 +639,15 @@ box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.03), 0px 12px 10px -6px rgba(154
 
 .courses__sert {
     padding-top: 178px;
-display: flex;
-align-items: start;
-justify-content: space-between;
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
 
 }
 
 
 
-.courses__sert-titles{
+.courses__sert-titles {
     width: 392px;
     color: #1E212C;
 }
@@ -649,32 +655,32 @@ justify-content: space-between;
 
 
 .courses__sert-subtitle {
-font-weight: 700;
-line-height: 150%;
-letter-spacing: 1px;
-text-transform: uppercase;
+    font-weight: 700;
+    line-height: 150%;
+    letter-spacing: 1px;
+    text-transform: uppercase;
 }
 
 
 .courses__sert-title {
-font-size: 46px;
-font-weight: 900;
-line-height: 130%;
-letter-spacing: 1px;
-margin-top: 8px;
+    font-size: 46px;
+    font-weight: 900;
+    line-height: 130%;
+    letter-spacing: 1px;
+    margin-top: 8px;
 }
 
 .courses__sert-text {
     font-weight: 400;
-    line-height: 160%; 
+    line-height: 160%;
     color: #424551;
     padding-top: 48px;
-    }
+}
 
 
 .courses__sert-logos {
     display: flex;
     justify-content: space-between;
-padding-top: 32px;    
-    
+    padding-top: 32px;
+
 }
