fixed title sect.3

--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -402,6 +402,13 @@ body {
     margin-bottom: 90px;
 }
 
+
+.heading--text-center{
+    text-align: center;
+    padding-top: 161px;
+
+}
+
 .heading {}
 
 .heading__subtitle {}
