--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -392,30 +392,17 @@ body {
 
 
 
-.directions {}
-
-.container {}
-
-.directions__inner {}
-
 .directions__heading {
     margin-bottom: 90px;
 }
 
 
-.heading--text-center{
+.heading--text-center {
     text-align: center;
     padding-top: 161px;
 
 }
 
-.heading {}
-
-.heading__subtitle {}
-
-.heading__title {}
-
-.directions__body {}
 
 .directions__filter-box {
     display: flex;
@@ -463,12 +450,33 @@ body {
     gap: 30px;
 }
 
-.directions__list-item {}
+
+.directions__list-item--marketing .directions__link-tag {
+    background: #03CEA4;
+}
+
+.directions__list-item--management .directions__link-tag{
+    background: #5A87FC;
+}
+
+.directions__list-item--hr .directions__link-tag{
+    background: #F89828;
+}
+
+.directions__list-item--design .directions__link-tag{
+ background: #F52F6E;
+}
+
+
+.directions__list-item--development .directions__link-tag {
+ background: #7772F1;
+}
+
 
 .directions__list-link {
-        display: block;
-        border-radius: 4px;
-        overflow: hidden;
+    display: block;
+    border-radius: 4px;
+    overflow: hidden;
     transition: all 1s;
 }
 
@@ -490,8 +498,8 @@ body {
 .directions__list-link--active {}
 
 .directions__image-box img {
-width: 100%;
-height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .directions__link-content {
@@ -500,11 +508,9 @@ height: 100%;
     flex-direction: column;
 
 
-border: 1px solid var(--gray-300, #E5E8ED);
-border-bottom-left-radius: 4px;
-border-bottom-right-radius: 4px;
-
-
+    border: 1px solid var(--gray-300, #E5E8ED);
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
 
 }
 
@@ -525,10 +531,9 @@ border-bottom-right-radius: 4px;
 .directions__link-text {
     margin-bottom: 20px;
     color: var(--gray-700, #787A80);
-
-
-font-weight: 400;
-line-height: 160%; /* 25.6px */
+    font-weight: 400;
+    line-height: 160%;
+    /* 25.6px */
 }
 
 
@@ -560,11 +565,12 @@ line-height: 160%; /* 25.6px */
     text-align: center;
     font-size: 20px;
     font-weight: 700;
-    line-height: 150%; /* 30px */
+    line-height: 150%;
+    /* 30px */
     display: flex;
     justify-content: center;
     align-items: center;
-border-radius: 4px;
+    border-radius: 4px;
 
 }
 
@@ -574,4 +580,3 @@ border-radius: 4px;
 
 
 }
-
