--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -404,19 +404,19 @@ body {
 
 }
 
-.heading--text-center::before{
-content: "";
-display: block;
-position: absolute;
-background: url("../images/decor/2.svg") no-repeat;
-top: 125px;
-left: -220px;
-width: 136px;
-height: 115px;
+.heading--text-center::before {
+    content: "";
+    display: block;
+    position: absolute;
+    background: url("../images/decor/2.svg") no-repeat;
+    top: 125px;
+    left: -220px;
+    width: 136px;
+    height: 115px;
 
 }
 
-.heading--text-center:after{
+.heading--text-center:after {
     content: "";
     display: block;
     position: absolute;
@@ -425,7 +425,7 @@ height: 115px;
     right: -450px;
     width: 242px;
     height: 242px;
-    
+
 }
 
 
@@ -481,21 +481,21 @@ height: 115px;
     background: #03CEA4;
 }
 
-.directions__list-item--management .directions__link-tag{
+.directions__list-item--management .directions__link-tag {
     background: #5A87FC;
 }
 
-.directions__list-item--hr .directions__link-tag{
+.directions__list-item--hr .directions__link-tag {
     background: #F89828;
 }
 
-.directions__list-item--design .directions__link-tag{
- background: #F52F6E;
+.directions__list-item--design .directions__link-tag {
+    background: #F52F6E;
 }
 
 
 .directions__list-item--development .directions__link-tag {
- background: #7772F1;
+    background: #7772F1;
 }
 
 
@@ -605,4 +605,77 @@ height: 115px;
     color: #424551;
 
 
+}
+
+
+/* --------------------end directions-------------------------------- */
+
+
+
+.cert {}
+
+.container {}
+
+.cert__inner {
+    display: flex;
+    padding-top: 178px;
+    justify-content: space-between;
+
+}
+
+.cert__content {
+    margin-right: 30px;
+}
+
+.cert__heading {
+    color: #1E212C;
+    width: 392px;
+}
+
+.cert__subtitle {
+    font-weight: 700;
+    line-height: 150%;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-bottom: 8px;
+    position: relative;
+}
+
+.cert__subtitle::before {
+content: "";
+display: block;
+position: absolute;
+top: -12px;
+left: -232px;
+width: 60px;
+height: 60px;
+background: url("../images/decor/4.svg");
+
+}
+
+
+.cert__title {
+    font-size: 46px;
+    font-weight: 900;
+    line-height: 130%;
+    margin-bottom: 48px;
+}
+
+.cert__text {}
+
+.cert__paragraph {
+    color: #424551;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 160%;
+    margin-bottom: 32px;
+}
+
+.cert__image-logo-box {
+    display: flex;
+    justify-content: space-between;
+}
+
+.cert__image-box img {
+    width: 100%;
 }
