--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -18,6 +18,18 @@ body {
     height: 100%;
 }
 
+.main_about {
+    padding-top: 160px;
+
+}
+.main_directions {
+    padding-bottom: 90px;
+}
+
+.main__sert {
+    margin-bottom: -46px;
+}
+
 .button {
     display: inline-block;
     font-weight: 700;
@@ -62,7 +74,7 @@ body {
     color: #1E212C;
 }
 
-.heading__subtitle: {
+.heading__subtitle {
     font-weight: 700;
     line-height: 150%;
     /* 24px */
@@ -70,34 +82,6 @@ body {
     text-transform: uppercase;
     margin-bottom: 8px;
 }
-
-.about__heading:hover>p {
-    color: #FF3F3A;
-}
-
-
-
-
-@keyframes myAnim {
-	0%,
-	50%,
-	100% {
-		opacity: 1;
-	}
-
-	25%,
-	75% {
-		opacity: 0;
-	}
-}
-
-
-.about__heading:hover>h2 {
-    animation: myAnim 5s ease 0s 1 normal forwards;
-
-}
-
-
 
 .heading__title {
     font-size: 46px;
@@ -166,19 +150,6 @@ body {
 .header__btn-box {
     display: flex;
     align-items: center;
-   
-}
-
-@keyframes myAnim4 {
-	0% {
-		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-		transform: scale(1) translateX(0) translateY(0);
-	}
-
-	100% {
-		box-shadow: 12px 12px 20px -12px rgba(0, 0, 0, 0.35);
-		transform: scale(1.1) translateX(-12px) translateY(-12px);
-	}
 }
 
 .header__user-btn {
@@ -316,10 +287,7 @@ body {
 }
 
 /* ---------------------end main----------------------------- */
-.about{
-    padding-top: 160px;
-    
-}
+
 
 
 .about__createx {
@@ -338,9 +306,9 @@ body {
     background: url(../images/decor/1.svg);
     width: 100px;
     height: 85px;
-    }
-    
-    
+}
+
+
 
 
 .about__createx-content {
@@ -354,7 +322,6 @@ body {
 
 .about__text {
     margin-bottom: 60px;
-    animation: myAnim4 2s ease 0s infinite normal forwards;
 }
 
 .about__paragraph {
@@ -374,9 +341,8 @@ body {
 
 }
 
-.about__btn-box:focus {
+.about__btn-box {
     display: flex;
-    box-shadow: 23px 5px 10px 1px #000000;
 }
 
 .about__btn {
@@ -387,174 +353,325 @@ body {
     margin-right: 0;
 }
 
-.about__values{
+.about__values {
     display: flex;
     justify-content: space-between;
-   
+
 }
 
 
-.about__numbers{
+.about__numbers {
     margin-left: 30px;
     align-self: center;
-    animation: myAnim2 2s ease 0s infinite normal forwards;
-}
-@keyframes myAnim2 {
-	0%,
-	100% {
-		transform: rotate(0deg);
-		transform-origin: 50% 100%;
-	}
-
-	10% {
-		transform: rotate(2deg);
-	}
-
-	20%,
-	40%,
-	60% {
-		transform: rotate(-4deg);
-	}
-
-	30%,
-	50%,
-	70% {
-		transform: rotate(4deg);
-	}
-
-	80% {
-		transform: rotate(-2deg);
-	}
-
-	90% {
-		transform: rotate(2deg);
-	}
 }
 
-.about__number{
+.about__number {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
 }
 
-.about__number:last-child{
-    margin-bottom: 0;`
+.about__number:last-child {
+    margin-bottom: 0;
+    `
 }
 
-.about__number span{
-font-size: 48px;
-font-weight: 900;
-line-height: 130%; /* 62.4px */
-letter-spacing: 1px;
-color: var(--primary, #FF3F3A);
-margin-right: 16px;
+.about__number span {
+    font-size: 48px;
+    font-weight: 900;
+    line-height: 130%;
+    /* 62.4px */
+    letter-spacing: 1px;
+    color: var(--primary, #FF3F3A);
+    margin-right: 16px;
 }
 
 
 
 
-.about__image-box:hover img {
+.about__image-box img {
+    border-radius: 4px;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    animation: myAnim 5s ease 0s 1 normal forwards;
+
 }
 
+/* ---------------------end avout----------------------------- */
 
-.about__img:active{
-    filter: blur(7px);
+
+
+
+
+.heading--text-center {
+    text-align: center;
+    padding-top: 161px;
+    position: relative;
+
 }
 
+.heading--text-center::before{
+content: "";
+display: block;
+position: absolute;
+background: url("../images/decor/2.svg") no-repeat;
+top: 125px;
+left: -220px;
+width: 136px;
+height: 115px;
 
-@keyframes myAnim {
-	0% {
-		animation-timing-function: ease-in;
-		opacity: 1;
-		transform: translateX(48px);
-	}
+}
 
-	24% {
-		opacity: 1;
-	}
-
-	40% {
-		animation-timing-function: ease-in;
-		transform: translateX(26px);
-	}
-
-	65% {
-		animation-timing-function: ease-in;
-		transform: translateX(13px);
-	}
-
-	82% {
-		animation-timing-function: ease-in;
-		transform: translateX(6.5px);
-	}
-
-	93% {
-		animation-timing-function: ease-in;
-		transform: translateX(4px);
-	}
-
-	25%,
-	55%,
-	75%,
-	87%,
-	98% {
-		animation-timing-function: ease-out;
-		transform: translateX(0px);
-	}
-
-	100% {
-		animation-timing-function: ease-out;
-		opacity: 1;
-		transform: translateX(0px);
-	}
+.heading--text-center:after{
+    content: "";
+    display: block;
+    position: absolute;
+    background: url("../images/decor/3.svg") no-repeat;
+    top: 550px;
+    right: -450px;
+    width: 242px;
+    height: 242px;
+    
 }
 
 
 
-@keyframes myAnim {
-	0% {
-		animation-timing-function: ease-in;
-		opacity: 0;
-		transform: scale(0);
-	}
+.directions__filter-box {
+    display: flex;
+    margin-bottom: 56px;
 
-	38% {
-		animation-timing-function: ease-out;
-		opacity: 1;
-		transform: scale(1);
-	}
-
-	55% {
-		animation-timing-function: ease-in;
-		transform: scale(0.7);
-	}
-
-	72% {
-		animation-timing-function: ease-out;
-		transform: scale(1);
-	}
-
-	81% {
-		animation-timing-function: ease-in;
-		transform: scale(0.84);
-	}
-
-	89% {
-		animation-timing-function: ease-out;
-		transform: scale(1);
-	}
-
-	95% {
-		animation-timing-function: ease-in;
-		transform: scale(0.95);
-	}
-
-	100% {
-		animation-timing-function: ease-out;
-		transform: scale(1);
-	}
 }
+
+.directions__filter-item {
+    margin-right: 45px;
+}
+
+.directions__filter-item:last-child {
+    margin-right: 0;
+}
+
+
+
+
+
+
+.directions__filter-btn {
+    background: transparent;
+    color: #9A9CA5;
+    border-radius: 4px;
+    border: 1px solid var(--gray-600, #9A9CA5);
+    font-weight: 700;
+    padding: 5px 7px;
+    font-size: 16px;
+    line-height: 1;
+
+}
+
+.directions__filter-btn--active {
+
+    border: none;
+    background: var(--btn-gradient, linear-gradient(56deg, #FF3F3A 0%, #F75E05 100%));
+    color: white;
+    padding: 6px 8px;
+}
+
+.directions__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 30px;
+}
+
+
+.directions__list-item--marketing .directions__link-tag {
+    background: #03CEA4;
+}
+
+.directions__list-item--management .directions__link-tag{
+    background: #5A87FC;
+}
+
+.directions__list-item--hr .directions__link-tag{
+    background: #F89828;
+}
+
+.directions__list-item--design .directions__link-tag{
+ background: #F52F6E;
+}
+
+
+.directions__list-item--development .directions__link-tag {
+ background: #7772F1;
+}
+
+
+.directions__list-link {
+    display: block;
+    border-radius: 4px;
+    overflow: hidden;
+    transition: all 1s;
+}
+
+
+.directions__list-link:hover {
+    box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.03), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 80px 80px -20px rgba(154, 156, 165, 0.08);
+    transition: all 0.3s;
+
+}
+
+
+.directions__list-link:hover .directions__link-btn {
+    color: #FF3F3A;
+    transition: all 1s;
+
+}
+
+
+.directions__list-link--active {}
+
+.directions__image-box img {
+    width: 100%;
+    height: 100%;
+}
+
+.directions__link-content {
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+
+
+    border: 1px solid var(--gray-300, #E5E8ED);
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+
+}
+
+.directions__link-tag {
+    font-weight: 700;
+    color: white;
+    line-height: 1;
+    background-color: #9A9CA5;
+    padding: 6px 8px;
+    border-radius: 4px;
+    align-self: flex-start;
+    margin-bottom: 21px;
+
+}
+
+
+
+.directions__link-text {
+    margin-bottom: 20px;
+    color: var(--gray-700, #787A80);
+    font-weight: 400;
+    line-height: 160%;
+    /* 25.6px */
+}
+
+
+
+.directions__link-btn:hover .directions__link-text {
+    color: var(--gray-700, #787A80);
+    margin-bottom: 20px;
+}
+
+.directions__link-btn {
+    color: var(--gray-900, #1E212C);
+    display: flex;
+    font-weight: 700;
+    transition: all 1s;
+
+}
+
+.directions__link-btn::after {
+    content: "";
+    display: block;
+    width: 24px;
+    height: 24px;
+    background: url("../images/icons/arrow-right.svg") 0 2px / 100% no-repeat;
+    margin-left: 11px;
+}
+
+.directions__list-item--empty {
+    background: #F4F5F6;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 150%;
+    /* 30px */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+
+}
+
+.directions__list-item--empty span {
+    width: 240px;
+    color: #424551;
+
+
+}
+
+
+
+/* ----------------------end directions_-------------------------------- */
+
+
+
+
+.sert__inner {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+
+
+.sert__inner::before {
+    
+        content: "";
+        display: block;
+        position: absolute;
+        background: url("../images/decor/4.svg") no-repeat;
+        top: -15px;
+        left: -190px;
+        width: 60px;
+        height: 60px;
+        
+    
+    
+}
+
+.sert__content {
+    margin-right: 30px;
+    max-width: 400px;
+}
+.cert__heading {
+    margin-bottom: 50px;
+}
+
+.heading__subtitle {
+}
+.heading__title {
+}
+.sert__text {
+    margin-bottom: 30px;
+}
+
+.sert__logos {
+    display: flex;
+}
+.sert__logos-item {
+    margin-right: 40px;
+}
+
+.sert__logos-item:last-child {
+    margin-right: 0px;
+}
+
+.sert__image-box {
+box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.10), 0px 80px 80px -20px rgba(154, 156, 165, 0.16);
+
+}
+
+
