--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -18,6 +18,18 @@ body {
     height: 100%;
 }
 
+.main_about {
+    padding-top: 160px;
+
+}
+.main_directions {
+    padding-bottom: 90px;
+}
+
+.main__sert {
+    margin-bottom: -46px;
+}
+
 .button {
     display: inline-block;
     font-weight: 700;
@@ -275,10 +287,7 @@ body {
 }
 
 /* ---------------------end main----------------------------- */
-.about {
-    padding-top: 160px;
 
-}
 
 
 .about__createx {
@@ -392,9 +401,6 @@ body {
 
 
 
-.directions__heading {
-    margin-bottom: 90px;
-}
 
 
 .heading--text-center {
@@ -404,19 +410,19 @@ body {
 
 }
 
-.heading--text-center::before {
-    content: "";
-    display: block;
-    position: absolute;
-    background: url("../images/decor/2.svg") no-repeat;
-    top: 125px;
-    left: -220px;
-    width: 136px;
-    height: 115px;
+.heading--text-center::before{
+content: "";
+display: block;
+position: absolute;
+background: url("../images/decor/2.svg") no-repeat;
+top: 125px;
+left: -220px;
+width: 136px;
+height: 115px;
 
 }
 
-.heading--text-center:after {
+.heading--text-center:after{
     content: "";
     display: block;
     position: absolute;
@@ -425,7 +431,7 @@ body {
     right: -450px;
     width: 242px;
     height: 242px;
-
+    
 }
 
 
@@ -481,21 +487,21 @@ body {
     background: #03CEA4;
 }
 
-.directions__list-item--management .directions__link-tag {
+.directions__list-item--management .directions__link-tag{
     background: #5A87FC;
 }
 
-.directions__list-item--hr .directions__link-tag {
+.directions__list-item--hr .directions__link-tag{
     background: #F89828;
 }
 
-.directions__list-item--design .directions__link-tag {
-    background: #F52F6E;
+.directions__list-item--design .directions__link-tag{
+ background: #F52F6E;
 }
 
 
 .directions__list-item--development .directions__link-tag {
-    background: #7772F1;
+ background: #7772F1;
 }
 
 
@@ -608,74 +614,64 @@ body {
 }
 
 
-/* --------------------end directions-------------------------------- */
+
+/* ----------------------end directions_-------------------------------- */
 
 
 
-.cert {}
 
-.container {}
-
-.cert__inner {
+.sert__inner {
     display: flex;
-    padding-top: 178px;
     justify-content: space-between;
-
-}
-
-.cert__content {
-    margin-right: 30px;
-}
-
-.cert__heading {
-    color: #1E212C;
-    width: 392px;
-}
-
-.cert__subtitle {
-    font-weight: 700;
-    line-height: 150%;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    margin-bottom: 8px;
     position: relative;
 }
 
-.cert__subtitle::before {
-content: "";
-display: block;
-position: absolute;
-top: -12px;
-left: -232px;
-width: 60px;
-height: 60px;
-background: url("../images/decor/4.svg");
 
+.sert__inner::before {
+    
+        content: "";
+        display: block;
+        position: absolute;
+        background: url("../images/decor/4.svg") no-repeat;
+        top: -15px;
+        left: -190px;
+        width: 60px;
+        height: 60px;
+        
+    
+    
 }
 
-
-.cert__title {
-    font-size: 46px;
-    font-weight: 900;
-    line-height: 130%;
-    margin-bottom: 48px;
+.sert__content {
+    margin-right: 30px;
+    max-width: 400px;
+}
+.cert__heading {
+    margin-bottom: 50px;
 }
 
-.cert__text {}
-
-.cert__paragraph {
-    color: #424551;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 160%;
-    margin-bottom: 32px;
+.heading__subtitle {
+}
+.heading__title {
+}
+.sert__text {
+    margin-bottom: 30px;
 }
 
-.cert__image-logo-box {
+.sert__logos {
     display: flex;
-    justify-content: space-between;
+}
+.sert__logos-item {
+    margin-right: 40px;
 }
 
-.cert__image-box img {
-    width: 100%;
+.sert__logos-item:last-child {
+    margin-right: 0px;
 }
+
+.sert__image-box {
+box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.10), 0px 80px 80px -20px rgba(154, 156, 165, 0.16);
+
+}
+
+
