--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -399,15 +399,15 @@ body {
 
 /* ---------------------end avout----------------------------- */
 
-
-
-
-
 .heading--text-center {
     text-align: center;
     padding-top: 161px;
     position: relative;
 
+}
+
+.directions__heading {
+    margin-bottom: 90px;
 }
 
 .heading--text-center::before{
@@ -674,4 +674,6 @@ box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.05), 0px 12px 10px -6px rgba(154
 
 }
 
+
+/*------------------------------end sert--------------------------------- */
 
