--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -399,8 +399,9 @@ body {
 
 /* ---------------------end avout----------------------------- */
 
-
-
+.directions__heading {
+    margin-bottom: 90px;
+}
 
 
 .heading--text-center {
