--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -676,3 +676,64 @@ box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.05), 0px 12px 10px -6px rgba(154
 }
 
 
+/* -----------------------------end cert--------------------------------- */
+
+.main__team {
+}
+.team {
+}
+.container {
+}
+.team__inner {
+}
+.team__heading {
+    margin-bottom: 60px;
+}
+.heading {
+}
+.heading__subtitle {
+}
+.heading__title {
+}
+.team__slider {
+}
+.team__slide {
+}
+.team__image-box {
+    border-radius: 4px;
+    margin-bottom: 16px;
+    overflow: hidden;
+}
+.team__image img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.team__image {
+    position: relative;
+    height: 340px;
+}
+
+
+.team__socials {
+}
+.team__social-item {
+}
+.team__social-link {
+}
+.team__info {
+    text-align: center;
+}
+.team__indo-name {
+    font-size: 20px;
+font-weight: 700;
+line-height: 150%; /* 30px */
+margin-bottom: 5px;
+}
+.team__info-position {
+    color: #787A80;
+}
