--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -694,7 +694,16 @@ box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.05), 0px 12px 10px -6px rgba(154
 }
 .team__heading {
     margin-bottom: 60px;
+    position: relative;
 }
+
+
+
+.team__slider-arrows{
+    position: absolute;
+}
+
+
 .heading {
 }
 .heading__subtitle {
