--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -692,16 +692,70 @@ box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.05), 0px 12px 10px -6px rgba(154
 }
 .team__inner {
 }
+
+
 .team__heading {
     margin-bottom: 60px;
     position: relative;
 }
 
 
-
-.team__slider-arrows{
+.team__slider-arrows {
+    display: flex;
+    line-height: 0;
     position: absolute;
+    right: 0;
+    bottom: 0;
+    
 }
+
+
+
+.team__slider-arrow {
+    display: block;
+    line-height: 0;
+    border-radius: 50%;
+    position: relative;
+    
+
+}
+
+.team__slider-arrow::before{
+content: "";
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%) scale(0);
+width: 48px;
+height: 48px;
+background-color: #FF3F3A;
+border-radius: 50%;
+z-index: -1;
+transition: all .3s;
+}
+
+.team__slider-arrow:hover::before {
+transform: translate(-50%, -50%) scale(1);
+
+}
+
+
+
+.team__slider-arrow:hover path{
+fill: white;
+transition: all .3s;
+
+}
+
+.team__slider-next {
+    margin-right: 24px;
+}
+
+
+
+
+
+
 
 
 .heading {
