--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -689,7 +689,10 @@ body {
 
 .main__team {}
 
-.team {}
+.team {
+   background: url("../images/decor/shapes-team.svg") 200px 30px no-repeat;
+    background-color: #F4F5F6;
+}
 
 .container {}
 
