--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -690,13 +690,11 @@ body {
 .main__team {}
 
 .team {
-   background: url("../images/decor/shapes-team.svg") 200px 30px no-repeat;
-    background-color: #F4F5F6;
+background: url("../images/decor/shapes-team.svg") 200px 30px no-repeat;
+/* background-color: #F4F5F6; */
+    
 }
 
-.container {}
-
-.team__inner {}
 
 
 .team__heading {
